# pyxlmapper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-pypi.yml  python-test.yml
src/pyxlmapper/: __init__.py  __main__.py  formatters.py  mapper.py  util.py
tests/: test_formatters.py  test_util.py
