[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyxlmapper"
dependencies = [
    "openpyxl>=3.1.5"
]
requires-python = ">= 3.8"
dynamic = ["version"]
authors = [
  {name = "Ruslan Panasiuk", email = "ruslan.panasiuk@gmail.com"},
]
description = "Mapper and parser for hierarchical spreadsheets"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pre-commit",
    "black",
    "mypy",
    "hatch",
]
docs = [
]

[tool.hatch.version]
path = "src/pyxlmapper/__about__.py"

[tool.hatch.metadata]
# Additional metadata for Hatch
requires-python = ">=3.8"
keywords = ["xlsx", "xls", "openpyxl", "parser", "mapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
]
features = ["dev"]

[tool.hatch.envs.test]
# Testing environment
dependencies = [
    "pytest",
]

[tool.hatch.envs.test.scripts]
test = "pytest tests/"
